# Machine-learning_mtg

./: .gitignore  ACTIVAR_VENV.md  Dockerfile  INSTALAR_DOCKER.md  MIGRACION_REGRESION_A_MULTICLASS.md  README.md  README_SETUP.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt  setup_dvc.sh
.dvc/: CONFIG_EXPLICACION.md
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
dags/: kedro_mtg_dag.py
notebooks/: CRISP-DM_mtg.ipynb  _kedro_init.py
src/ml_mtg/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/ml_mtg/pipelines/classification/: nodes.py  pipeline.py
src/ml_mtg/pipelines/data_prep/: nodes.py  pipeline.py
src/ml_mtg/pipelines/regression/: nodes.py  pipeline.py
tests/pipelines/data_science/: test_pipeline.py
